--- a/weloveub/app/pages/home/home.scss
+++ b/weloveub/app/pages/home/home.scss
@@ -1,3 +1,24 @@
 .home {
-  
+  background-color: #171f32;
+}
+#menu_space_top{
+    height: 50%;
+    padding-top: 50px;
+    text-align: center;
+}
+.main_menu_card{
+    background-color: transparent;
+    width: 100%;
+    height: 100px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    color: #fff;
+}
+.main_menu_card_text{
+    margin-left: 10px;
+}
+.main_menu_card_icon{
+    width: 50px;
+    height: 50px;
+    margin: 10px; 
 }
