--- a/weloveub/app/pages/home/home.scss
+++ b/weloveub/app/pages/home/home.scss
@@ -1,5 +1,8 @@
-.home {
-  background-color: #171f32;
+#home {
+//   background-color: #171f32;
+  background-image: url('../icons/WeLoveUB.jpg');
+  background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 #menu_space_top{
     height: 50%;
@@ -7,7 +10,7 @@
     text-align: center;
 }
 .main_menu_card{
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100px;
     border: 1px solid #fff;
